--- a/micro_content_manager/templates/micro_content_manager/create.html
+++ b/micro_content_manager/templates/micro_content_manager/create.html
@@ -1,73 +1,183 @@
 {% load static %}
 <!DOCTYPE html>
+<style>
+
+     .box {
+        border-style: solid;
+        border-color: black;
+        border-width: 5px;
+        text-align: center;
+     }
+
+    .option-font{
+        font-palette: light;
+        font-size: 15px;
+    }
+    #full-container {
+        margin-left: 450px;
+    }
+
+    .button {
+        font: bold 11px Arial;
+        text-decoration: none;
+        background-color: #EEEEEE;
+        color: #333333;
+        padding: 2px 6px 2px 6px;
+        border-top: 1px solid #CCCCCC;
+        border-right: 1px solid #333333;
+        border-bottom: 1px solid #333333;
+        border-left: 1px solid #CCCCCC;
+        cursor: pointer;
+    }
+     .blue-box {
+        background-color: rgba(92,114,250,0.81);
+        color: #fff;
+        margin: 20px 1200px 20px 10px ;
+        padding: 0.6em;
+        cursor: pointer;
+         text-align: center;
+    }
+    .delete-box {
+        background-color: red;
+        color: #fff;
+        margin: 20px 1200px 20px 10px ;
+        padding: 0.6em;
+        cursor: pointer;
+         text-align: center;
+    }
+
+</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <title>Create</title>
 </head>
 <body>
 
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script>
+         $(document).ready(function() {    //llamamos la a funcion ready() porque vamos a hacer referencia a etiquetas que estan declaradas posteriormente en el documento
+                    document.getElementById("addQuestion").addEventListener("click", addQuestion, false);
+                    var del = document.querySelectorAll("#questions-container span");
+                      for (var i=0;i<del.length;i++) {
+                          del[i].addEventListener("click",deleteQuestion, false);
+                      }
+         });
+         function deleteQuestion(num) {
 
-<h1>Micro-learning contents generator</h1>
+              var id = num.target.id;
+              id = id.toString();
+              i =  id[7];
+              $("#q"+i).replaceWith("<span> </span>");
 
-<p><a class="button" href="{%  url 'user_page'%}">Go home</a></p>
+             // var index = id.substring(id.indexOf("q")+1, id.length());
+          //   $("#q"+index+"-container").replaceWith("");
 
-<form action="{% url 'micro_content_manager:store' nQuestions %}" method="post">
 
-    {% csrf_token %}
-    <span> User: {{ user.username }}</span>
-    <h2>Content</h2>
-    <p><label for="title">Title: <input type="text" placeholder="Title" name="title" required></label></p>
-    <p>Tags: <input type="text" name="mc_tags" required>
-     (Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3))</p>
+         }
+         function addQuestion() {
+                     $("#addQuestion-container h5").removeClass("animated bounce");
+                     $("#addQuestion-container h5").addClass("animated bounce");
+                     $("#idQuestions").attr('value',  parseInt($("#idQuestions").val()) + 1);
 
-    {% for p in paragraphs %}
-        <p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1"
-                                                     cols="100"></textarea></p>
-    {% endfor %}
+                    var id = $("#idQuestions").val();
 
-    <h2>Videos</h2>
-    {% for v in videos %}
-        <h4>Video {{ forloop.counter }}</h4>
-        <p>URL:<input name="videoURL{{ forloop.counter }}" type="url"></p>
-        <p>Format:
-            <select name="videoFormat{{ forloop.counter }}">
-                <option value="mp4" selected>mp4</option>
-                <option value="ogg">ogg</option>
-            </select>
-        </p>
+                    $("#newQuestions-container").append("<div id=\"q"+id+"\" >");
 
-        <p>Upload form:
-            <select name="video_upload_form{{ forloop.counter }}">
-                <option value="from_existing_file" selected>From existing file</option>
-                <option value="link_from_youtube">Link from YouTube</option>
-                <option value="download_from_youtube">Download from Youtube</option>
-                <option value="external_repository">From external repository</option>
-            </select>
-        </p>
-    {% endfor %}
-    <h2>Quiz</h2>
-    {% for q in questions %}
-        <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
-                                                     cols="100"></textarea></p>
+                     $("#q"+id).append("<p>Question "+$("#idQuestions").val()+": <textarea name=\"question"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
+                         "                                                             cols=\"80\"></textarea><span id=\"deleteq"+$("#idQuestions").val()+"\" class=\"button delete-box\">Delete</span></p></p>");
+                     $("#q"+id).append("<p>Choices "+$("#idQuestions").val()+" (write the possible answers and select the correct one):</p>\n");
+                     $("#q"+id).append("  {% for c in choices %}\n"+
+                         "                    <p>\n"+
+                         "                        <input type=\"radio\" name=\"answer"+$("#idQuestions").val()+"\"\n"
+                         +
+                         "                               value=\"choice"+$("#idQuestions").val()+"_{{ forloop.counter }}\"\n"
+                         +
+                         "                               {% if forloop.counter == 1 %}checked {% endif %}>\n"+
+                         "                        <input type=\"text\" name=\"choice"+$("#idQuestions").val()+"_{{ forloop.counter }}\">\n"
+                         +
+                         "                    </p>\n"+
+                         "                {% endfor %}");
 
-        Choices {{ forloop.counter }} (write the possible answers and sel_ect the correct one):<br>
-        {% for c in choices %}
-            <input type="radio" name="answer{{ forloop.parentloop.counter }}"
-                   value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
-                   {% if forloop.counter == 1 %}checked {% endif %}>
-            <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"><br>
-        {% endfor %}
 
-        <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
-                                                        cols="100"></textarea></p>
-    {% endfor %}
+                        $("#q"+id).append("<p>Explanation "+$("#idQuestions").val()+": <textarea name=\"explanation"+$("#idQuestions").val()+"\" rows=\"1\"\n" +
+                                 "                                                                cols=\"100\"></textarea></p></div>");
+                     document.getElementById("deleteq"+id).addEventListener("click", deleteQuestion, false);
+         }
+       </script>
 
-    <input type="hidden" id="author" name="author" value={{ user.username }}>
-    <input type="hidden" id="creation_type" name="creation_type" value="own creation">
-    <input type="submit" value="Create micro-learning content">
 
-</form>
+    <div id="full-container">
+        <h1>Micro-learning contents generator</h1>
+        <p><a class="button" href="{%  url 'user_page'%}">Go home</a></p>
+      <form action="{% url 'micro_content_manager:store' nQuestions %}" method="post">
+            {% csrf_token %}
+            <span> User: {{ user.username }}</span>
+            <h2>Content</h2>
+            <p><label for="title">Title: <input type="text" placeholder="Title" name="title"></label></p>
+            <p>Tags: <input type="text" name="mc_tags">
+             (Tags must be inserted separated by blank spaces (e.g., Tag1 Tag2 Tag3))</p>
+            {% for p in paragraphs %}
+                <p>Paragraph {{ forloop.counter }}:<textarea name="paragraph{{ forloop.counter }}" rows="1" cols="100"></textarea></p>
+            {% endfor %}
+            <h2>Videos</h2>
+            {% for v in videos %}
+                <h4>Video {{ forloop.counter }}</h4>
+                <p>URL:<input name="videoURL{{ forloop.counter }}" type="url"></p>
+                <p>Format:
+                    <select name="videoFormat{{ forloop.counter }}">
+                        <option value="mp4" selected>mp4</option>
+                        <option value="ogg">ogg</option>
+                    </select>
+                </p>
+                <p>Upload form:
+                    <select name="video_upload_form{{ forloop.counter }}">
+                        <option value="from_existing_file" selected>From existing file</option>
+                        <option value="link_from_youtube">Link from YouTube</option>
+                        <option value="download_from_youtube">Download from Youtube</option>
+                        <option value="external_repository">From external repository</option>
+                    </select>
+                </p>
+            {% endfor %}
 
+                <h2>Quiz</h2>
+                <div id="addQuestion-container">
+                    <h5 id="addQuestion" class="button blue-box">Add Question</h5>
+                </div>
+
+            <div id="questions-container">
+            {% for q in questions %}
+
+                <div id="q{{ forloop.counter }}">
+                    <p>Question {{ forloop.counter }}: <textarea name="question{{ forloop.counter }}" rows="1"
+                                                                 cols="80"></textarea><span id="deleteq{{ forloop.counter }}" class="button delete-box">Delete</span></p>
+                    <p>Choices {{ forloop.counter }} (write the possible answers and select the correct one):</p>
+                    {% for c in choices %}
+                        <p>
+                            <input type="radio" name="answer{{ forloop.parentloop.counter }}"
+                                   value="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}"
+                                   {% if forloop.counter == 1 %}checked {% endif %}>
+                            <input type="text" name="choice{{ forloop.parentloop.counter }}_{{ forloop.counter }}">
+                        </p>
+                    {% endfor %}
+
+                    <p>Explanation {{ forloop.counter }}: <textarea name="explanation{{ forloop.counter }}" rows="1"
+                                                                 cols="100"></textarea></p>
+                </div>
+            {% endfor %}
+            </div>
+
+            <input type="hidden" id="idQuestions" name="idQuestions" value={{ nQuestions }}>
+            <div id="newQuestions-container">
+
+            </div>
+
+            <input type="hidden" id="author" name="author" value={{ user.username }}>
+            <input type="hidden" id="creation_type" name="creation_type" value="own creation">
+            <input type="submit" value="Create micro-learning content">
+        </form>
+
+    </div>
 </body>
 </html>
