--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -15,6 +15,8 @@
         <p><a href="{% url 'micro_content_manager:index' %}">Micro-content Index</a></p>
         <p><a href="{% url 'micro_content_manager:micro_content_search' %}">Search</a></p>
         <p><a href="{% url 'micro_content_manager:create_selection' %}">Create Selection</a></p>
+        <p><a href="{% url 'micro_content_manager:record_video' %}">Record Video</a></p>
+
 
     {% else %}
       <p>You are not logged in</p>
