--- a/users_manager/templates/registration/password_reset_form.html
+++ b/users_manager/templates/registration/password_reset_form.html
@@ -1,17 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
+<!DOCTYPE html>
+<style>
+
+</style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>User Data</title>
+</head>
+<body>
+        {% block title %}Forgot Your Password?{% endblock %}
+        {% block content %}
+                  <h1>Forgot your password?</h1>
+                  <p>Enter your email address below and we'll email instructions for setting a new one.</p>
+                  <form  method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input id="submitButton" type="submit" value="Send me instructions!">
+                  </form>
+        {% endblock %}
 
 
-{% block title %}Forgot Your Password?{% endblock %}
-
-{% block content %}
-  <h1>Forgot your password?</h1>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-
-  <form  method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
-  </form>
-</div>
-{% endblock %}
+</body>
+</html>
