--- a/users_manager/templates/users_manager/password_change.html
+++ b/users_manager/templates/users_manager/password_change.html
@@ -1,7 +1,26 @@
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Save changes</button>
-</form>
+<!DOCTYPE html>
+<style>
+    #full-container {
+        margin-left: 600px;
+    }
+</style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>User Data</title>
+</head>
 
-<p><a class="button" href="{%  url 'user_page'%}">Back to my user profile</a></p>
+<body>
+    <div id="full-container">
+        <h2>Password Change</h2>
+        <p><a class="button" href="{%  url 'user_page'%}">Go Home</a></p>
+        <form method="post">
+              {% csrf_token %}
+              {{ form }}
+              <button type="submit">Save changes</button>
+        </form>
+
+    </div>
+</body>
+
+</html>
