--- a/micro_content_manager/templates/micro_content_manager/create_selection.html
+++ b/micro_content_manager/templates/micro_content_manager/create_selection.html
@@ -66,6 +66,9 @@
          box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px     6px rgba(0,0,0,0.23);
 
      }
+     #previewText {
+         text-align: center;
+     }
     #options-container {
         margin-left: 50px;
 
@@ -114,7 +117,7 @@
                      $("#option1").addClass("animated bounce");
                      $("#microContentImage-container").html("<img id=\"microContentImage\" class = \"border selected\"  src=\"{% static 'images/1video_3questions.png'%}\">\n");
                      $('#createButton').attr('href', '{% url 'micro_content_manager:micro_content_creation' 1 3 %}');
-                     $(document.getElementById("previewText").textContent="Preview of option 1");
+                     $(document.getElementById("previewText").textContent="Option 1 preview");
                      break;
                  case option2:
                      $("#options-container  h5").removeClass("selected");
@@ -123,7 +126,7 @@
                      $("#option2").addClass("animated bounce");
                      $("#microContentImage-container").html("<img id=\"microContentImage\" class = \"border selected\"  src=\"{% static 'images/1video_5questions2.png'%}\">\n");
                      $('#createButton').attr('href', "{% url 'micro_content_manager:micro_content_creation' 1 5 %}");
-                     $(document.getElementById("previewText").textContent="Preview of option 2");
+                     $(document.getElementById("previewText").textContent="Option 2 preview");
                      break;
                  case option3:
                      $("#options-container  h5").removeClass("selected");
@@ -132,7 +135,7 @@
                      $("#option3").addClass("animated bounce");
                      $("#microContentImage-container").html("<img id=\"microContentImage\" class = \"border selected\"  src=\"{% static 'images/2videos_5questions.png'%}\">\n");
                      $('#createButton').attr('href', "{% url 'micro_content_manager:micro_content_creation' 2 5 %}");
-                     $(document.getElementById("previewText").textContent="Preview of option 3");
+                     $(document.getElementById("previewText").textContent="Option 3 preview");
                     break;
                  case option4:
                      $("#options-container  h5").removeClass("selected");
@@ -141,7 +144,7 @@
                      $("#option4").addClass("animated bounce");
                      $("#microContentImage-container").html("<img id=\"microContentImage\" class = \"border selected\"  src=\"{% static 'images/2videos_7questions.png'%}\">\n");
                      $('#createButton').attr('href', "{% url 'micro_content_manager:micro_content_creation' 2 7 %}");
-                     $(document.getElementById("previewText").textContent="Preview of option 4");
+                     $(document.getElementById("previewText").textContent="Option 4 preview");
                    break;
              }
            }
@@ -149,14 +152,15 @@
         </script>
 
         <div id="container-full">
-            <h1 id="title">Create Selection <hr></h1>
+
             <div id="center-container" class="center-box">
+                <h1 id="title">Create Selection <hr></h1>
                 <div id="createButton-container">
                     <a id="createButton" href="{% url 'micro_content_manager:micro_content_creation' 1 3 %}" class="box">Create</a>
                 </div>
 
                 <div id="microContentPreview-container" >
-                    <h3 id="previewText">Preview of option 1 </h3>
+                    <h3 id="previewText">Option 1 preview</h3>
                     <div id="microContentImage-container">
                         <img id="microContentImage" src="{% static 'images/1video_3questions.png'%}">
                     </div>
