--- a/micro_content_manager/templates/micro_content_manager/webcam_record.html
+++ b/micro_content_manager/templates/micro_content_manager/webcam_record.html
@@ -140,11 +140,6 @@
 
                 <br>
 
-                <button id="btn-start-recording">Start Recording</button>
-                <button id="btn-pause-recording" style="display: none; font-size: 15px;">Pause</button>
-
-
-
                 <hr style="border-top: 0;border-bottom: 1px solid rgb(189, 189, 189);margin: 4px -12px;margin-top: 8px;">
                 <select class="media-resolutions">
                     <option value="default">Default resolutions</option>
@@ -173,6 +168,11 @@
                     <option value="800">100 Bytes bps</option>
                 </select>
             </h2>
+
+            <br>
+
+            <button id="btn-start-recording" style="font-size: 40px;">Start Recording</button>
+            <button id="btn-pause-recording" style="display: none; font-size: 15px;">Pause</button>
 
             <div style="text-align: center; display: none;">
                 <button id="save-to-disk">Save To Disk</button>
@@ -244,7 +244,8 @@
                 title: 'Recording status: inactive',
                 buttons: ['full-screen'/*, 'take-snapshot'*/],
                 showOnMouseEnter: false,
-                width: 360,
+                width: 500,
+                height: 375,
                 onTakeSnapshot: function() {
                     var canvas = document.createElement('canvas');
                     canvas.width = mediaElement.clientWidth;
