--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<style>
+    #full-container {
+        margin-left: 600px;
+    }
+    #submitButton {
+        margin-left: 350px;
+    }
+</style>
 <html>
 <head>
   <meta charset="utf-8">
@@ -6,8 +14,10 @@
 </head>
 <body>
   <main>
+  <div id="full-container">
     {% block content %}
     {% endblock %}
+  </div>
   </main>
 </body>
 </html>
