--- a/users_manager/templates/registration/password_reset_confirm.html
+++ b/users_manager/templates/registration/password_reset_confirm.html
@@ -1,22 +1,73 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Log in</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 
-{% block title %}Enter new password{% endblock %}
 
-{% block content %}
-<h1>Set a new password!</h1>
-<form method="POST">
-  {% csrf_token %}
+	</head>
+	<body class="bg-study">
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-    <ul>
-        <li>New password: {{ form.new_password1 }}</li>
-        <p style="margin-left: 60px">
-            <span>Your password can't be too similar to your other personal information.</span><br>
-            <span>Your password must contain at least 8 characters.</span><br>
-            <span>Your password can't be a commonly used password.</span><br>
-            <span>Your password can't be entirely numeric.</span><br>
-        </p>
-        <li> Repeat your new password: {{form.new_password2 }}</li>
-    </ul>
-  <input type="submit" value="Change my password">
-</form>
-{% endblock %}
+		<div class="body body-s">
+
+			 <form class="sky-form" method="post">
+                {% csrf_token %}
+				<header>Set a new password</header>
+
+				<fieldset>
+                    {% if form.errors %}
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                     {% endif %}
+					<section>
+						<div class="row">
+							<div class="col col-8">
+								<label class="input">New password:
+                                    {{ form.new_password1 }}
+                                </label>
+							</div>
+						</div>
+					</section>
+
+					<section>
+						<div class="row">
+							<div class="col col-8">
+								<label class="input">Repeat new password:
+                                    {{ form.new_password2}}
+                                </label>
+							</div>
+						</div>
+					</section>
+
+					<section>
+						<div class="row">
+							<div class="col col-4"></div>
+						</div>
+					</section>
+                    <input type="hidden" name="next" value="{{ next }}">
+
+				</fieldset>
+				<footer>
+					<button type="submit" class="button" style="background-color: green;">Save new password</button>
+				</footer>
+			</form>
+
+		</div>
+	</body>
+</html>
