--- a/users_manager/templates/registration/password_reset_form.html
+++ b/users_manager/templates/registration/password_reset_form.html
@@ -1,26 +1,66 @@
-{% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
-<style>
-
-</style>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Data</title>
-</head>
-<body>
-        {% block title %}Forgot Your Password?{% endblock %}
-        {% block content %}
-                  <h1>Forgot your password?</h1>
-                  <p>Enter your email address below and we'll email instructions for setting a new one.</p>
-                  <form  method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input id="submitButton" type="submit" value="Send me instructions!">
-                  </form>
-        {% endblock %}
+<html>
+	<head>
+		<title>Log in</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 
 
-</body>
+	</head>
+	<body class="bg-study">
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+		<div class="body body-s">
+
+			 <form class="sky-form" method="post">
+                {% csrf_token %}
+				<header>Forgot your password?</header>
+
+				<fieldset>
+                    {% if form.errors %}
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                     {% endif %}
+					<section>
+						<div class="row">
+                            <h4 style="text-indent: 15px">Instructions to recover the password</h4> <h4 style="text-indent: 15px">will be sent to the email below. </h4>
+							<div class="col col-8">
+								<label class="input">
+                                    <input type="email" name="email" maxlength="254" required="" id="id_email" placeholder="email">
+                                </label>
+							</div>
+						</div>
+					</section>
+
+					<section>
+						<div class="row">
+							<div class="col col-4"></div>
+						</div>
+					</section>
+                    <input type="hidden" name="next" value="{{ next }}">
+
+				</fieldset>
+				<footer>
+
+					<button type="submit" class="button" style="background-color: green;">Send me instructions</button>
+                     <a id="id_back_button" class="button" href="{% url 'login' %}" >Back</a>
+				</footer>
+			</form>
+
+		</div>
+	</body>
 </html>
