--- a/users_manager/templates/registration/password_reset_complete.html
+++ b/users_manager/templates/registration/password_reset_complete.html
@@ -1,8 +1,42 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Log in</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 
-{% block title %}Password reset complete{% endblock %}
 
-{% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
-{% endblock %}
+	</head>
+	<body class="bg-study">
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+		<div class="body body-s">
+
+			 <form class="sky-form" method="post">
+                {% csrf_token %}
+				<header>Password reset done</header>
+
+				<fieldset>
+					<section>
+						<div class="row">
+                            <h4>Your new password has been set. You can log in now in the <a href="{% url 'login' %}">log in page</a>.</h4>
+						</div>
+					</section>
+
+					<section>
+						<div class="row">
+							<div class="col col-4"></div>
+						</div>
+					</section>
+                    <input type="hidden" name="next" value="{{ next }}">
+
+				</fieldset>
+			</form>
+
+		</div>
+	</body>
+</html>
