--- a/users_manager/templates/registration/password_reset_done.html
+++ b/users_manager/templates/registration/password_reset_done.html
@@ -1,8 +1,42 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Log in</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 
-{% block title %}Email Sent{% endblock %}
 
-{% block content %}
-  <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
-{% endblock %}
+	</head>
+	<body class="bg-study">
+			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+		<div class="body body-s">
+
+			 <form class="sky-form" method="post">
+                {% csrf_token %}
+				<header>Email sent</header>
+
+				<fieldset>
+					<section>
+						<div class="row">
+                            <h4>We've emailed you instructions for setting your password.</h4>
+						</div>
+					</section>
+
+					<section>
+						<div class="row">
+							<div class="col col-4"></div>
+						</div>
+					</section>
+                    <input type="hidden" name="next" value="{{ next }}">
+
+				</fieldset>
+			</form>
+
+		</div>
+	</body>
+</html>
