--- a/users_manager/templates/users_manager/confirm_registration.html
+++ b/users_manager/templates/users_manager/confirm_registration.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Your account will be activate it shortly</title>
+     <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+     <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
 </head>
 <body>
     <h4>'The administrator will confirm your registration shortly. You will receive an email with the confirmation'</h4>
