--- a/users_manager/templates/users_manager/password_change.html
+++ b/users_manager/templates/users_manager/password_change.html
@@ -1,26 +1,57 @@
+{% load static %}
 <!DOCTYPE html>
 <style>
-    #full-container {
-        margin-left: 600px;
-    }
 </style>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Data</title>
-</head>
+<html>
+	<head>
+		<title>Sign up</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+	</head>
+	<body class="bg-study">
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="js/jquery.placeholder.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-<body>
-    <div id="full-container">
-        <h2>Password Change</h2>
-        <p><a class="button" href="{%  url 'user_page'%}">Go Home</a></p>
-        <form method="post">
-              {% csrf_token %}
-              {{ form }}
-              <button type="submit">Save changes</button>
-        </form>
+		<div class="body body-s">
 
-    </div>
-</body>
+			<form method="post" class="sky-form">
+                {% csrf_token %}
+				<header>Password Change</header>
+				<fieldset>
+                    {{ form.errors }}
+					<section>
+						<label class="input">Old password:
+                            {{ form.old_password }}
+							<b class="tooltip tooltip-bottom-right">Only latin characters and numbers</b>
+						</label>
+					</section>
 
+					<section>
+						<label class="input">New password:
+                            {{ form.new_password1 }}
+							<b class="tooltip tooltip-bottom-right">Needed to verify your account</b>
+						</label>
+					</section>
+
+					<section>
+						<label class="input" >New password confirmation:
+							{{ form.new_password2 }}
+							<b class="tooltip tooltip-bottom-right">Only latin characters and numbers</b>
+						</label>
+					</section>
+				</fieldset>
+
+				<footer>
+					<button type="submit" class="button" style="background-color: green">Save changes</button>
+                    <a id="id_back_button" class="button" onclick="window.history.back();" >Back</a>
+				</footer>
+			</form>
+
+		</div>
+
+
+	</body>
 </html>
