--- a/users_manager/templates/users_manager/signup.html
+++ b/users_manager/templates/users_manager/signup.html
@@ -1,16 +1,81 @@
-{% extends 'base.html' %}
 {% load static %}
+<!DOCTYPE html>
+<style>
+</style>
+<html>
+	<head>
+		<title>Sign up</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+	</head>
+	<body class="bg-study">
+            <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+			<script src="js/jquery.placeholder.min.js"></script>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-{% block title %}Sign Up{% endblock %}
-{% block content %}
-  <h2>Sign up to Micro Learning Platform</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_ul  }}
-      <br>
-    <button type="submit">Sign up</button>
-      <a class="button" href="{% url 'login' %}">Back</a> <br>
+		<div class="body body-s">
 
-  </form>
+			<form method="post" class="sky-form">
+                {% csrf_token %}
+				<header>Sign up<a id="id_back_button" class="button" href="{% url 'login' %}" >Back</a></header>
+				<fieldset>
+                    {{ form.errors }}
+					<section>
+						<label class="input">
+                            {{ form.username }}
+							<b class="tooltip tooltip-bottom-right">Only latin characters and numbers</b>
+						</label>
+					</section>
 
-{% endblock %}
+					<section>
+						<label class="input">
+                            {{ form.email }}
+							<b class="tooltip tooltip-bottom-right">Needed to verify your account</b>
+						</label>
+					</section>
+
+					<section>
+						<label class="input" >
+							{{ form.password1 }}
+							<b class="tooltip tooltip-bottom-right">Only latin characters and numbers</b>
+						</label>
+					</section>
+
+					<section>
+						<label class="input">
+							{{ form.password2 }}
+							<b class="tooltip tooltip-bottom-right">Only latin characters and numbers</b>
+						</label>
+					</section>
+				</fieldset>
+
+				<fieldset>
+					<div class="row">
+						<section class="col col-6">
+							<label class="input">
+                                {{ form.first_name }}
+							</label>
+						</section>
+						<section class="col col-6">
+							<label class="input">
+								{{ form.last_name }}
+							</label>
+						</section>
+					</div>
+				</fieldset>
+				<footer>
+					<button type="submit" class="button" style="background-color: green">Sign up</button>
+				</footer>
+			</form>
+
+		</div>
+
+
+	</body>
+</html>
+
+
+
+
